# zphqst-01

./: CMakeLists.txt  Makefile  README.md  prj.conf
boards/adafruit/feather_rp2350/: Kconfig.feather_rp2350  board.cmake  board.yml  feather_rp2350_rp2350a_m33.dts  feather_rp2350_rp2350a_m33_defconfig
src/: main.c
zephyr/: module.yaml
